--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+
 * {
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
@@ -6,38 +7,39 @@
     padding: 0;
 }
 
-/* body {
-    align-items: center;
-    background-color: #fff;
-    justify-content: center;
-    min-height: 100vh;
-
-} */
-
 .wrapper {
+    align-items: center;
     background: #fff;
     border-radius: 12px;
     display: flex;
-    align-items: center;
-    margin-top: 15rem;
     flex-direction: column;
-  
+    height: 500px;
+    justify-content: center;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+
 
 
 }
-.Log-in-text{
+
+
+.Log-in-text {
+    align-items: center;
+    color: #000000;
+    display: flex;
     font-family: 'Comfortaa';
-font-style: normal;
-font-weight: 400;
-font-size: 36px;
-line-height: 40px;
-display: flex;
-align-items: center;
-letter-spacing: -0.015em;
-color: #000000;
-margin-bottom: 32px;
-margin-right: 14rem;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: -0.015em;
+    line-height: 40px;
+    margin-bottom: 32px;
+    margin-right: 14rem;
 }
+
 .password-box {
     display: flex;
     flex-direction: column;
@@ -46,24 +48,24 @@ margin-right: 14rem;
 
 
 #email {
-    Width: 343px;
-    Height: 52px;
     background: #FFFFFF;
     border: 2px solid #000000;
+    Height: 52px;
+    Width: 343px;
 }
 
 #pass {
-    Width: 343px;
-    Height: 52px;
     background: #FFFFFF;
     border: 2px solid #000000;
+    Height: 52px;
+    Width: 343px;
 }
 
 #btn1 {
-    color: white;
-    Width: 343px;
-    Height: 52px;
     background: #000000;
-    border: 2px solid #000000;
     border-radius: 6px;
+    border: 2px solid #000000;
+    color: white;
+    Height: 52px;
+    Width: 343px;
 }
