--- a/src/Components/Photos/Photos.css
+++ b/src/Components/Photos/Photos.css
@@ -17,7 +17,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 16px;
     transition: transform 0.2s ease-in-out;
-    width: 20%;
+    width: 18%;
     margin: 10px;
     text-align: center;
 }
@@ -25,3 +25,18 @@
 .container:hover {
     transform: translateY(-4px);
 }
+
+
+@media screen and (max-width: 768px) {
+    .container {
+    width: 48%;
+    margin: 1%;
+    }
+    }
+    
+    @media screen and (max-width: 480px) {
+    .container {
+    width: 100%;
+    margin: 2%;
+    }
+    }
