--- a/src/Components/Albums/Albums.css
+++ b/src/Components/Albums/Albums.css
@@ -1,21 +1,27 @@
 .main {
     display: flex;
-    flex-wrap: wrap;
+flex-direction: column;
     justify-content: center;
     padding-top: 5rem;
+    text-align: center;
+    align-items: center;
   }
   
   .albums {
-    width: 50%; 
+    /* width: 50%;  */
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
   
   .albums-Container {
+    width: 35rem;
     background-color: #fff;
     border-radius: 5px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     transition: transform 0.2s ease-in-out;
   }
   
