--- a/src/Components/Header/LogOut.css
+++ b/src/Components/Header/LogOut.css
@@ -1,21 +1,24 @@
-.Log-out{
-float: right;
-font-family: Arial, sans-serif;
-font-weight: bold;
-font-size: 16px;
-margin-right: 2rem;
+.Log-out {
+  float: right;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  margin-right: 2rem;
 
 }
+
 .Log-out i {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 20px;
-    margin-right: 8px;
-    color: white;
-  }button i {
+  color: white;
   display: inline-block;
-  vertical-align: middle;
   font-size: 20px;
   margin-right: 8px;
+  vertical-align: middle;
+}
+
+button i {
   color: white;
+  display: inline-block;
+  font-size: 20px;
+  margin-right: 8px;
+  vertical-align: middle;
 }
